[gd_scene load_steps=6 format=2]

[ext_resource path="res://hud/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://hud/hud.gd" type="Script" id=3]
[ext_resource path="res://hud/healthcircle.png" type="Texture" id=4]
[ext_resource path="res://hud/staminacircle.png" type="Texture" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -128.0
margin_right = 132.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 0

[node name="HealthBar" type="TextureProgress" parent="HBoxContainer/CenterContainer"]
margin_right = 128.0
margin_bottom = 128.0
step = 16.667
value = 100.0
texture_progress = ExtResource( 4 )
fill_mode = 4

[node name="StaminaBar" type="TextureProgress" parent="HBoxContainer/CenterContainer"]
margin_right = 128.0
margin_bottom = 128.0
value = 100.0
texture_progress = ExtResource( 5 )
fill_mode = 4

[node name="Item" type="Label" parent="HBoxContainer"]
margin_left = 132.0
margin_top = 76.0
margin_right = 388.0
margin_bottom = 128.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 8
custom_fonts/font = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="VBoxContainer2"]
margin_right = 40.0
margin_bottom = 14.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -60.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 899.0
margin_right = 1020.0
margin_bottom = 120.0
size_flags_horizontal = 4
alignment = 1

[node name="TextureProgress" type="TextureProgress" parent="CenterContainer/VBoxContainer"]
margin_left = 28.0
margin_right = 92.0
margin_bottom = 64.0
size_flags_horizontal = 4
texture_progress = ExtResource( 2 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PromptPickup" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 121.0
margin_bottom = 120.0
size_flags_horizontal = 12
custom_fonts/font = ExtResource( 1 )
text = "PROMPT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -93.0
margin_right = 389.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/HBoxContainer"]
margin_right = 180.0
margin_bottom = 353.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullBright" type="CheckButton" parent="WindowDialog/HBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 40.0
text = "Use Fullbright"

[node name="ObliviusEnemy" type="CheckButton" parent="WindowDialog/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 180.0
margin_bottom = 84.0
text = "Oblivius Enemy"

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialog/HBoxContainer"]
margin_left = 184.0
margin_right = 523.0
margin_bottom = 353.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 1 )
